# book_analysis

./: Final Report.ipynb  Final_Report.ipynb  README.md  pyproject.toml  requirements.txt
data/: artificial_intelligence_a_modern_approach.txt  notre_dame_de_paris_hugo.txt
notebooks/: DSA_GP2_Prototype2.ipynb  q1_prototype.ipynb  report.ipynb
src/: Q2_Modules.py  __init__.py  defaults.py  parser.py  toc.py
src/book_analysis/: __init__.py  frequency_counter.py  letters_and_words.py  nlp.py  parser.py  search.py  toc.py  traversal.py
tests/: test_letters_and_words.py  test_nlp.py  test_parser.py  test_search.py  test_text_utils.py  test_toc.py  test_traversal.py
